--- a/chingoal/home/templates/login.html
+++ b/chingoal/home/templates/login.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
-    {% block wrapper-content %}
-     <div id="wrapper">
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+    {% block narbar-content %}
+
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -11,11 +10,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home.html">Chingoal</a>
+                <a class="navbar-brand" href="#">Chingoal</a>
             </div>
             <!-- /.navbar-header -->
-
-            <ul class="nav navbar-top-links navbar-right">
+                        <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -213,10 +211,10 @@
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
                         </li>
-                        <li><a href="{% url 'editProfile' %}"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -224,190 +222,64 @@
                 <!-- /.dropdown -->
             </ul>
             <!-- /.navbar-top-links -->
+    </nav>
+    {% endblock %}
 
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
-                        <li>
-                            <a href="#"><i class="glyphicon glyphicon-home"></i> Dashboard</a>
-                        </li>
-                        <li>
-                            <a href="discussion_board.html"><i class="fa fa-group"></i> Discussion</a>
-                        </li>
-                        <li>
-                            <a href="store.html"><i class="fa fa-shopping-cart"></i> Store</a>
-                        </li>
-                        <li>
-                            <a href="chingoal-post-question.html"><i class="fa fa-bomb"></i> Post Question</a>
-                        </li>
- 
-                    </ul>
+
+{% block main-content %}
+ <div class="container">
+    
+        <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">Welcome To Chingoal</h1>
                 </div>
-                <!-- /.sidebar-collapse -->
-            </div>
-            <!-- /.navbar-static-side -->
-        </nav>
-
-        <!-- Page Content -->
-        <div id="page-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">Chingoal</h1>
-                    </div>
-                    <!-- /.col-lg-12 -->
-                </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container-fluid -->
-            <div class="row">
-                      <div class="col-lg-7">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Learning Level
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <p>
-                                <button type="button" class="btn btn-success btn-lg btn-block">Level 1</button>
-                            <br>
-                            </p>
-
-                            <p>
-                                <button type="button" class="btn btn-success btn-lg btn-block">Level 2</button>
-                            <br>
-                            </p>
-
-                            <p>
-                                <button type="button" class="btn btn-info btn-lg btn-block">Level 3</button>
-                            <br>
-                            </p>
-
-                            <p>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 1</button>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 2</button>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 3</button>
-                            <br>
-                            <br>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 4</button>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 5</button>
-                            <br>
-                            <br>
-                            </p>
-
-                            <p>
-                                <button type="button" class="btn btn-primary btn-lg btn-block">Level 4</button>
-                            <br>
-                            </p>
-
-                            <p>
-                                <button type="button" class="btn btn-primary btn-lg btn-block">Level 5</button>
-                            <br>
-                            </p>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel-default -->
-               </div>
-               <!-- /.col-lg-7 -->
-            <div class="col-lg-5">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            User Profile
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-xs-6 col-md-3 col-md-offset-4">
-                                    <a href="#" class="thumbnail">
-                                        <img src="{{cur_user.photo.url}}" alt="no image" width="300px" style=" height:100px;width:350px;">
-                                    </a>
-                                </div>
-
-                            </div>
-                            <div class=" row col-xs-6 col-md-3 col-md-offset-3">
-                            <span>Username:{{username}}</span><br/>
-                            <span>Title:{{cur_user.title}}</span>
-                            <span>Bio:{{cur_user.bio}}</span>
-                            </div>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel-default -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                           Achievement
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class=" col-md-offset-2">
-                            <span>User Level:</span>
-                            <p>{{ cur_user.level_plan }}</p>
-                            <p>{{ cur_user.lesson_plan }}</p>
-<!-- 
-                            <p class="fa fa-star"></p>
-                            <p class="fa fa-star"></p>
-                            <p class="fa fa-star"></p>
-                            <p class="fa fa-star"></p>
-                            <p class="fa fa-star"></p>
- -->
-                            </div>
-                            <div class=" col-md-offset-2">
-                                <span>Schedule:<p>{{ cur_user.progress_lesson }}</p><p>{{ cur_user.progress_level }}</p> Per Day</span>
-                            </div>
-                                                     
-                                
-                                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Edit</button>
-                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                                <h4 class="modal-title" id="myModalLabel">New Post</h4>
-                                            </div>
-                                            <div class="modal-body">
-                                                <form role="form" action="{% url 'editSchedule' %}" method="post">
-                                                    <div class="form-group">
-                                                        <!-- <label>Text area</label> -->
-                                                        {% for field in scheduleForm.visible_fields %}
-                                                            {{field}}
-                                                            <br>
-                                                        {% endfor %}    
-                                                    </div>
-                                                    <button type="submit" class="btn btn-default">Submit</button>
-                                                    {% csrf_token %}
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                           
-                        </div>
-
-                        <div class="form-group input-group col-md-offset-2">
-                            <span class="input-group-addon">Money</span>
-                            <input type="text" class="form-control">
-                            <span class="input-group-addon">$</span>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel-default -->
-            </div>
-            <!-- /.col-lg-5 -->
+                <!-- /.col-lg-12 -->
         </div>
-        <!-- /.row -->
-    </div>
-    <!-- /#wrapper -->
-
-     {% endblock %}
+            <!-- /.row -->
+        <div class="row">
+        <div class="col-md-5 col-md-offset-1">
+        <div class="panel-body">
+        <img src="http://ecx.images-amazon.com/images/I/41X5Q0bd6rL._SY300_.jpg" alt="Logo" height="230" width="200" style="margin-top:70px;">
+         </div>
+         </div>
+            <div class="col-md-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Please Sign In</h3>
+                    </div>
+                    <div class="panel-body">
+                        {% if form.errors %}
+                        <p>
+                        Incorrect email and password.
+                        </p>
+                        {% endif %}
+                        <form role="form" action="{% url 'login' %}" method="post">
+                            <fieldset>
+                                <div class="form-group">
+                                     <!-- {{ form.username.label_tag }} -->
+                                        {{ form.username}}
+                                </div>
+                                <div class="form-group">
+                                    <!-- {{ form.password.label_tag }} -->
+                                        {{ form.password}}
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                    </label>
+                                    <label style="margin-left:120px;">
+                                        <a href="{% url 'register' %}">SignUp</a>
+                                    </label>
+                                </div>
+                                {% csrf_token %}
+                                <!-- Change this to a button or input when using this as a form -->
+                                <button class="btn btn-lg btn-info btn-block" type="submit">Login</a>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+           </div> 
+{% endblock %}
