--- a/chingoal/store/templates/store/store.html
+++ b/chingoal/store/templates/store/store.html
@@ -314,60 +314,47 @@
                 <div class="row">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <button type="button" id="myButton1" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 1</button>
-                            <button type="button" id="myButton2" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 2</button>
-                            <button type="button" id="myButton3" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 3</button>
-                            <button type="button" id="myButton4" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 4</button>
-                            <button type="button" id="myButton5" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 5</button>
+                            {% if cur_user.unlock > 0 %}<button type="button" class="btn btn-primary btn-lg">
+                            <span class="fa fa-unlock"></span>
+                            {% else %}<button type="button" id="myButton1" value="1" class="btn btn-primary btn-lg" onClick="unlock('myButton1',{{cur_user.unlock}})">
+                            <span class="fa fa-lock"></span>
+                            {% endif %} Session 1</button>
+                            
+                            {% if cur_user.unlock > 1 %}<button type="button" class="btn btn-primary btn-lg">
+                            <span class="fa fa-unlock"></span>
+                            {% else %}<button type="button" id="myButton2" value="2" class="btn btn-primary btn-lg" onClick="unlock('myButton2',{{cur_user.unlock}})">
+                            <span class="fa fa-lock"></span>
+                            {% endif %} Session 2</button>
+                            
+                            {% if cur_user.unlock > 2 %}<button type="button" class="btn btn-primary btn-lg">
+                            <span class="fa fa-unlock"></span>
+                            {% else %}<button type="button" id="myButton3" value="3" class="btn btn-primary btn-lg" onClick="unlock('myButton3',{{cur_user.unlock}})">
+                            <span class="fa fa-lock"></span>
+                            {% endif %} Session 3</button>
+                            
+                            {% if cur_user.unlock > 3 %}<button type="button" class="btn btn-primary btn-lg">
+                            <span class="fa fa-unlock"></span>
+                            {% else %}<button type="button" id="myButton4" value="4" class="btn btn-primary btn-lg" onClick="unlock('myButton4',{{cur_user.unlock}})">
+                            <span class="fa fa-lock"></span>
+                            {% endif %} Session 4</button>
+                            
+                            {% if cur_user.unlock > 4 %}<button type="button" class="btn btn-primary btn-lg">
+                            <span class="fa fa-unlock"></span>
+                            {% else %}<button type="button" id="myButton5" value="5" class="btn btn-primary btn-lg" onClick="unlock('myButton5',{{cur_user.unlock}})">
+                            <span class="fa fa-lock"></span>
+                            {% endif %} Session 5</button>
+
                         </div>
                         
                     </div> 
                 </div>              
     </div>
-<!-- 
-    <script language="Javascript">
-        var = LEVELS["One level","Two levels","Three levels","Four levels","Five levels"];
-    document.getElementById("myButton1").onclick = function () {
-        var r=confirm("Do you want to unlock lesson 1?");
-        if (r==true) {
-            location.href = "unlock-learning/LEVELS[0]";
-        }       
-    };
-    document.getElementById("myButton2").onclick = function () {
-        var r=confirm("Do you want to unlock lesson 2?");
-        if (r==true) {
-            location.href = "unlock-learning/LEVELS[1]";
-        }       
-    };
-    document.getElementById("myButton3").onclick = function () {
-        var r=confirm("Do you want to unlock lesson 3?");
-        if (r==true) {
-            location.href = "unlock-learning/LEVELS[2]";
-        }       
-    };
-    document.getElementById("myButton4").onclick = function () {
-        var r=confirm("Do you want to unlock lesson 4?");
-        if (r==true) {
-            location.href = "unlock-learning/LEVELS[3]";
-        }       
-    };
-    document.getElementById("myButton5").onclick = function () {
-        var r=confirm("Do you want to unlock lesson 5?");
-        if (r==true) {
-            location.href = "unlock-learning/LEVELS[4]";
-        }       
-    };
-     </script>
- -->
 
-    {% load static %}
-	<script src="{% static "jquery-2.1.4.min.js" %}"></script>
-	<script src="{% static "store.js" %}"></script>
-
-<!-- 
-    <script src="../static/jquery-2.1.4.min.js"></script>
-    <script src="../static/store.js"></script>
- -->
     <!-- /#wrapper -->
 
      {% endblock %}
+     
+    {% block script-content %}
+    {% load static %}
+    <script src="{% static "store.js"%}"></script>
+    {% endblock %}
